objects/Newstar_Log_Record__c.object
<CustomObject>
    <fields>
        <fullName>Correlation_ID__c</fullName>
        <label>Correlation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Context__c</fullName>
        <label>Event Context</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Object_ID__c</fullName>
        <label>Primary Object ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                    <default>true</default>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trace_Info__c</fullName>
        <label>Trace Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>NEWSTAR Log Record</label>
    <nameField>
        <displayFormat>LG{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEWSTAR Log Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failures</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failures</label>
    </listViews>
    <listViews>
        <fullName>Last_24_hours</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Last 24 hours</label>
    </listViews>
</CustomObject>